Added the footer

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -40,4 +40,9 @@
     -->
 </body>
 
+<footer>
+  <p>Autor: Jean Trujillo</p>
+  <p>Technical Challenge for <a href="https://www.sofka.com.co/es/sofka-university/">SofkaU</a></p>
+</footer>
+
 </html>
